@@ -404,7 +404,7 @@ if ( ! empty ( $id ) && $id > 0 ) {
   $overall_percent = array();
 
   // Get category if passed in URL as cat_id.
-  $cat_id = getGetValue ( 'cat_id' );
+  $cat_id = getValue ( 'cat_id', '-?[0-9]+', true );
   if ( ! empty ( $cat_id ) ) {
     $res = dbi_execute ( 'SELECT cat_name FROM webcal_categories
       WHERE cat_id = ? AND ( cat_owner = ? OR cat_owner IS NULL )',
